<resources>
    <string name="app_name">Daangnmarket</string>
    <string name="home">홈</string>
    <string name="near_life">동네생활</string>
    <string name="search_near">내 근처</string>
    <string name="chatting">채팅</string>
    <string name="my_daangn">나의 당근</string>
    <string name="arround">Around</string>
    <string name="mymenu">MyMenu</string>
    <string name="nearlife">NearLife</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="design_title_text">[특가]우리 강아지가 사용하던 모든 물건을 저렴하게 판매합니다. 필요하신분 연락주세요</string>
    <string name="design_location_text">영통1동</string>
    <string name="design_timeinfo_text">* 끌올 30분 전</string>
    <string name="design_price_text">50,000원</string>
    <string name="around_title">내 근처</string>
    <string name="search_shop_hint">영통2동 주변 가게를 찾아보세요</string>
    <string name="recommend_shops">이웃들의 추천 가게</string>
    <string name="around_shop_news">내 근처 가게 소식</string>
</resources>