<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    >

    <ImageView
        android:id="@+id/img_thumbnail"
        android:layout_marginVertical="10dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@null"
        android:src="@drawable/ic_loading_24"
        android:contentDescription="image thumbnail of product" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/img_thumbnail"
        android:text="@string/design_title_text"
        android:textSize="20sp"
        android:maxLines="2"
        android:ellipsize="end"
        />

    <TextView
        android:id="@+id/txt_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/img_thumbnail"
        android:layout_below="@id/txt_title"
        android:text="@string/design_location_text"
        />

    <TextView
        android:id="@+id/txt_time_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_title"
        android:layout_toEndOf="@id/txt_location"
        android:text="@string/design_timeinfo_text"
        />

    <TextView
        android:id="@+id/txt_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/img_thumbnail"
        android:layout_below="@id/txt_location"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/design_price_text"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        >
        <include layout="@layout/snippet_product_status"/>
    </RelativeLayout>

</RelativeLayout>